gcc/testsuite/rust/rustc/ui/generics/generic-function-item-where-type_dg.rs
fn foo<U>() {}

fn main() {
    foo::<main>()
// { dg-error ".E0747." "" { target *-*-* } .-1 }
}

